# fdf

./: CMakeLists.txt  Makefile  check_color.c  draw_map.c  exit.c  fdf  fdf.h  for_utilits.h  ft_mouse.c  give_color.c  init_struct.c  initialize.c  key_hook.c  main.c  projection.c  read_map.c  test.fdf  utilits.c
includes/: fdf.h  for_utilits.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/sources/: ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_isalpha.c  ft_isascii.c  ft_lstdel.c  ft_lstdelone.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_strclr.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncpy.c  ft_strsub.c  ft_toupper.c  ft_wordcount.c
libft/src/: ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_clear_mass.c  ft_fact.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_sqrt.c  ft_strcat.c  (+30 more)
src/: check_color.c  draw_map.c  exit.c  ft_mouse.c  give_color.c  initialize.c  key_hook.c  main.c  projection.c  read_map.c  utilits.c
